RESOLVED FIXED76279
[Gtk] Input text field not repainted when value is changed
https://bugs.webkit.org/show_bug.cgi?id=76279
Summary [Gtk] Input text field not repainted when value is changed
Nicklas Sandgren
Reported 2012-01-13 08:54:52 PST
Viewing attached page with GtkLauncher. Pressing the button will append a "1" to the input text field, but the new characters wont show unless you do something more, like clicking outside the GtkLauncher window or hover the input field. This problem does not occur in the qt port (using QtTestBrowser), there the "1"'s appear as expected when you click the button. Building and running on 64bit Ubuntu 11.10.
Attachments
simple page to trigger bug (397 bytes, text/html)
2012-01-13 08:56 PST, Nicklas Sandgren
no flags
Patch (2.04 KB, patch)
2012-01-16 15:05 PST, Martin Robinson
no flags
Nicklas Sandgren
Comment 1 2012-01-13 08:56:29 PST
Created attachment 122435 [details] simple page to trigger bug
Martin Robinson
Comment 2 2012-01-16 15:05:59 PST
Martin Robinson
Comment 3 2012-01-16 15:06:55 PST
Thanks for reducing this bug! It's reponsible for a lot of *really bad* redraw issues.
Gustavo Noronha (kov)
Comment 4 2012-01-17 03:44:12 PST
Comment on attachment 122686 [details] Patch Makes sense =D
WebKit Review Bot
Comment 5 2012-01-17 08:03:28 PST
Comment on attachment 122686 [details] Patch Clearing flags on attachment: 122686 Committed r105161: <http://trac.webkit.org/changeset/105161>
WebKit Review Bot
Comment 6 2012-01-17 08:03:33 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.