[Gtk] Input text field not repainted when value is changed https://bugs.webkit.org/show_bug.cgi?id=76279

Patch by Martin Robinson <mrobinson@igalia.com> on 2012-01-17
Reviewed by Gustavo Noronha Silva.

Force pending relayouts before freezing the dirty region in a temporary.
This prevents the following code from throwing the dirty updates away
after the original paint is finished.

* WebCoreSupport/ChromeClientGtk.cpp:
(WebKit::paintWebView): Remove the relayout.
(WebKit::ChromeClient::paint): Move the relayout here, before the
dirty region is frozen.

git-svn-id: svn://svn.chromium.org/blink/trunk@105161 bbb929c8-8fbe-4397-9dbb-9b2b20218538