third_party/WebKit/Source/WebKit/gtk/WebCoreSupport/ChromeClientGtk.cpp
@@ -505,7 +505,6 @@ static void paintWebView(WebKitWebView* webView, Frame* frame, Region dirtyRegio
 
     Vector<IntRect> rects = dirtyRegion.rects();
     coalesceRectsIfPossible(dirtyRegion.bounds(), rects);
-    frame->view()->updateLayoutAndStyleIfNeededRecursive();
 
     RefPtr<cairo_t> backingStoreContext = adoptRef(cairo_create(webView->priv->backingStore->cairoSurface()));
     GraphicsContext gc(backingStoreContext.get());
@@ -561,6 +560,7 @@ void ChromeClient::paint(WebCore::Timer<ChromeClient>*)
         return;
 
     performAllPendingScrolls();
+    frame->view()->updateLayoutAndStyleIfNeededRecursive();
     paintWebView(m_webView, frame, m_dirtyRegion);
 
     const IntRect& rect = m_dirtyRegion.bounds();
